<resources>
    <string name="app_name">RecipeBox</string>
    <string name="browse_text">Browse Recipes</string>
    <string name="favorites_text">Favorites</string>
    <string name="add_recipe_text">Add New Recipe</string>
    <string name="logout_text">Logout</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings for adding a new recipe -->
    <string name="add_recipe_name">Recipe Name</string>
    <string name="add_recipe_img">Recipe Image URL</string>
    <string name="add_recipe_btn">Add Recipe</string>
    <string name="add_another_ing_btn">Another Ingredient</string>
    <string name="delete_another_ing_btn">Delete Ingredient</string>
    <string name="add_another_inst_btn">Another Instruction</string>
    <string name="delete_another_inst_btn">Delete Instruction</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
