<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context=".AddRecipeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_space"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/menu_text_size"
        android:text="@string/add_recipe_text"/>

    <EditText
        android:id="@+id/addRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_recipe_name" />

    <EditText
        android:id="@+id/addRecipeImgUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_recipe_img"/>

    <Button
        android:id="@+id/addRecipeNowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_btn"/>

</LinearLayout>
