<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_space"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/menu_text_size"
        android:editable="true"/>

    <Button
        android:id="@+id/browseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_text" />

    <Button
        android:id="@+id/addRecipeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_text"/>

    <Button
        android:id="@+id/favoritesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_text"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_text"/>

</LinearLayout>
